tests/expectations/parser/identifiers/reserved_identifier_fail.out
Error [EPAR0370047]: expected pattern
    --> test:7:13
     |
   7 |         let constructor: u32 = 42u32;
     |             ^^^^^^^^^^^
